domain-server/resources/web/css/style.css
body {
  position: relative;
  padding-bottom: 30px;
}

.table-lead .lead-line {
  background-color: black;
}

.table-lead h3 {
  background-color: white;
  float: left;
  margin-right: 5px;
}

.table-lead .lead-line {
  height: 2px;
  overflow: hidden;
  position: relative;
  top: 40px;
}

.table .value-row td, .table .inputs td {
    vertical-align: middle;
}

.glyphicon-remove {
  font-size: 24px;
}

.glyphicon-remove:hover {
  color: #000000;
  cursor: pointer;
}

span.port {
  color: #666666;
}

.locked {
  color: #428bca;
}

.locked-table {
  cursor: not-allowed;
  background-color: #eee;
}

.advanced-setting {
  display: none;
}

#setup-sidebar.affix {
  position: fixed;
  top: 15px;
}

#setup-sidebar button {
  width: 100%;
  margin-top: 10px;
}

#small-save-button {
  width: 100%;
  margin-bottom: 15px;
}

td.buttons {
  width: 30px;
}

td.buttons.reorder-buttons {
  width: 40px;
}

td .glyphicon {
  text-align: center;
  font-size: 12px;
}

td.add-del-buttons .glyphicon {
  display: block;
}

td.reorder-buttons .glyphicon {
  display: inherit;
}

td a.glyphicon {
  color: black;
  text-decoration: none;
}

tr.new-row {
  color: #3c763d;
  background-color: #dff0d8;
}

.graphable-stat {
  text-align: center;
  color: #5286BC;
  cursor: pointer;
}

.highchart-modal .modal-dialog {
  width: 650px;
}

table {
  table-layout: fixed;
  word-wrap: break-word;
}

caption {
    color: #333;
    font-weight: 700;
    padding-top: 0;
}

table[name="security.standard_permissions"] .headers td + td, table[name="security.permissions"] .headers td + td {
    text-align: center;
}

#security .tooltip-inner {
    max-width: 520px;
    text-align: left;
}

#xs-advanced-container {
  margin-bottom: 20px;
}

#advanced-toggle-button-xs {
  width: 100%;
}

/* styling for bootstrap-switch toggles */
.checkbox-help {
  margin-top: 10px;
}

/* CSS only spinner for AJAX requests */

.spinner {
  margin: 30px auto 0;
  width: 70px;
  text-align: center;
}

.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #333;

  border-radius: 100%;
  display: inline-block;
  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
  animation: bouncedelay 1.4s infinite ease-in-out;
  /* Prevent first frame from flickering when animation starts */
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

@-webkit-keyframes bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0.0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes bouncedelay {
  0%, 80%, 100% {
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 40% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

